aish-rs/tui/src/chatwidget/snapshots/aish_tui__chatwidget__tests__approvals_selection_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Select Approval Mode

› 1. Read Only          Requires approval to edit files and run commands.
  2. Current Directory  Edit files in the current directory, and run commands.
  3. Full Access        Edit files outside this directory and run commands
                        with network access. Use with caution.

  Press enter to confirm or esc to go back
