aish-rs/tui/src/chatwidget/snapshots/aish_tui__chatwidget__tests__disabled_slash_command_while_task_running_snapshot.snap
---
source: tui/src/chatwidget/tests.rs
expression: blob
---
■ '/approvals' is disabled while a task is in progress.
