aish-rs/tui/src/chatwidget/snapshots/aish_tui__chatwidget__tests__mcp_startup_header_booting.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"• Booting MCP server: alpha (0s • esc to interrupt)                             "
"                                                                                "
"                                                                                "
"›                                                                               "
"                                                                                "
"  100% context left · ? for shortcuts                                           "
